--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "magellantools"
-version = "0.0.1"
+version = "0.0.2"
 description = "Tools to parse and manipulate data from the Magellan mission stored on NASA's PDS"
 readme = "README.md"
 requires-python = ">=3.6"
@@ -28,5 +28,4 @@ repository = "https://github.com/iganache/magellantools"
 documentation = "https://magellantools.readthedocs.io/en/latest/"
 
 [project.scripts]
-arcdr2csv = "magellantools.script.arcdr2csv:main"
-arcdr2gpkg = "magellantools.script.arcdr2gpkg:main"
+arcdr2table = "magellantools.script.arcdr2table:main"
